blueprints/education-training/salesforce/force-app/main/default/objects/Cohort__c/Cohort__c.object-meta.xml
<CustomObject>
    <description>One dated run of a programme, either open to any employer or run in-house for one client. Holds the dates, capacity and trainer. Used to decide whether a run is viable and to see free places.</description>
    <label>Cohort</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cohorts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>