blueprints/education-training/salesforce/force-app/main/default/objects/Cohort__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Names the client for an in-house cohort. Empty for open cohorts.</description>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>In-house cohorts</relationshipLabel>
    <relationshipName>In_house_cohorts</relationshipName>
    <type>Lookup</type>
</CustomField>