blueprints/education-training/salesforce/force-app/main/default/objects/Cohort__c/fields/Cohort_type__c.field-meta.xml
<CustomField>
    <fullName>Cohort_type__c</fullName>
    <description>Whether any employer can book a place or the run is for one client only.</description>
    <label>Cohort type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open to any employer</fullName>
            </value>
            <value>
                <fullName>In-house for one client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>