blueprints/education-training/salesforce/force-app/main/default/objects/Cohort__c/fields/Confirmed_places__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_places__c</fullName>
    <description>Count of enrolments at the enrolled stage. Maintained by an automation, not typed.</description>
    <label>Confirmed places</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>