blueprints/education-training/salesforce/force-app/main/default/objects/Cohort__c/fields/End_date__c.field-meta.xml
<CustomField>
    <fullName>End_date__c</fullName>
    <description>Last day of the cohort.</description>
    <label>End date</label>
    <type>Date</type>
</CustomField>