blueprints/education-training/salesforce/force-app/main/default/objects/Cohort__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Venue or platform used, so logistics and room bookings can be checked.</description>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>