blueprints/education-training/salesforce/force-app/main/default/objects/Cohort__c/fields/Minimum_to_run__c.field-meta.xml
<CustomField>
    <fullName>Minimum_to_run__c</fullName>
    <description>The fewest confirmed delegates at which the cohort still runs. Below this it is reviewed for cancellation.</description>
    <label>Minimum to run</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>