blueprints/education-training/salesforce/force-app/main/default/objects/Cohort__c/fields/Programme__c.field-meta.xml
<CustomField>
    <fullName>Programme__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Shows every dated run of a programme and its fill rate.</description>
    <label>Programme</label>
    <referenceTo>Programme__c</referenceTo>
    <relationshipLabel>Cohorts</relationshipLabel>
    <relationshipName>Cohorts</relationshipName>
    <type>Lookup</type>
</CustomField>