blueprints/education-training/salesforce/force-app/main/default/objects/Cohort__c/fields/Start_date__c.field-meta.xml
<CustomField>
    <fullName>Start_date__c</fullName>
    <description>First day of the cohort.</description>
    <label>Start date</label>
    <type>Date</type>
</CustomField>