blueprints/education-training/salesforce/force-app/main/default/objects/Cohort__c/fields/Trainer__c.field-meta.xml
<CustomField>
    <fullName>Trainer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The team member leading the cohort.</description>
    <label>Trainer</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Cohorts Trainer</relationshipLabel>
    <relationshipName>Cohort_Trainer</relationshipName>
    <type>Lookup</type>
</CustomField>