blueprints/education-training/salesforce/force-app/main/default/objects/Cohort__c/listViews/Cohorts_with_places.listView-meta.xml
<ListView>
    <fullName>Cohorts_with_places</fullName>
    <columns>NAME</columns>
    <columns>Start_date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open for enrolment</value>
    </filters>
    <filters>
        <field>Start_date__c</field>
        <operation>greaterThan</operation>
        <value>TODAY</value>
    </filters>
    <label>Cohorts with places</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>